[package]
name = "haxor"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "haxor"
bench = false
test = false

[dependencies]
flipperzero = { version = "0.4.0", path = "../flipperzero-rs/crates/flipperzero" }
flipperzero-sys = { version = "0.4.0", path = "../flipperzero-rs/crates/sys" }
flipperzero-rt = { version = "0.4.0", path = "../flipperzero-rs/crates/rt" }
